fix: make scrollbar thin at code blocks (#1261)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -477,6 +477,10 @@ ul {
   list-style-type: disc;
 }
 
+.tw-scrollbar-thin {
+  scrollbar-width: thin;
+}
+
 :root {
   /* ========== Global ========== */
   /* Color of the background */
